--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    {% comment %} get fontawesome {% endcomment %}
+    <link rel="stylesheet" href="{% static 'fontawesome/all.min.css' %}">
     <title>{% block title %}{% endblock title %}</title>
     {% block css %}{% endblock css %}
   </head>
@@ -13,6 +15,8 @@
 
     {% comment %} path login page {% endcomment %}
     {% url 'home' as home_path %}
+    {% url 'board_list' as boards %}
+
 
 
 
@@ -21,6 +25,8 @@
     
     {% if request.path == home_path %}
     {% include "parts/header.html" %}
+    {% elif request.path == boards %}
+    {% include "board/parts/header.html" %}
     {% endif %}
     {% comment %} end header {% endcomment %}
 
@@ -35,8 +41,10 @@
     {% comment %} end footer {% endcomment %}
 
     {% comment %} js files {% endcomment %}
-    {% block js %}{% endblock js %}
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-    
+    <script src="{% static 'jquery/jquery-3.7.1.min.js' %}"></script>
+    <script src="{% static 'colorfield/jscolor/jscolor.js' %}"></script>
+
+    {% block js %}{% endblock js %}
   </body>
 </html>
