add : create list in board

--- a/board/templates/board/parts/header.html
+++ b/board/templates/board/parts/header.html
@@ -1,6 +1,6 @@
 {% load static %}
-<nav class="navbar bg-light mb-3">
-    <div class="container">
+<nav class="navbar bg-light mb-1">
+    <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="{{request.info.logo.url}}" alt="{{request.info.name}}" height="35" width="80">
       </a>
