--- a/board/templates/board/parts/sidebar.html
+++ b/board/templates/board/parts/sidebar.html
@@ -7,7 +7,7 @@
     <ul class="nav nav-pills flex-column mb-auto">
       {% for board in board_list %}
       <li class="nav-item">
-        <a href="#" class="nav-link" aria-current="page">
+        <a href="{% url 'board_detail' pk=board.id %}" class="nav-link" aria-current="page">
           <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
             <rect width="100%" height="100%" fill="{{board.bg_color}}" />
           </svg>
