--- a/templates/base.html
+++ b/templates/base.html
@@ -37,14 +37,15 @@
 
 
 
-
-   
    {% comment %} js files {% endcomment %}
+    <script>
+      const csrfToken = '{{ csrf_token }}';
+    </script>
     <script src="{% static 'jquery/jquery-3.7.1.min.js' %}"></script>
     <script src="{% static 'colorfield/jscolor/jscolor.js' %}"></script>
-    
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     {% block js %}{% endblock js %}
   </body>
 </html>
