add checklist style and backend

--- a/board/templates/board/board_detail.html
+++ b/board/templates/board/board_detail.html
@@ -106,6 +106,21 @@ body {
 {% block js %}
 <script>
   const changeDescInCard = "{% url 'change_desc_in_card' %}"
+  const addChecklist = "{% url 'add_checklist' %}"
+
+  
+  
+  {% comment %} const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
+  const popoverList = [...popoverTriggerList].map(popoverTriggerEl => {
+    return new bootstrap.Popover(popoverTriggerEl, {
+      html: true,
+      sanitize: false, 
+    });
+  }); {% endcomment %}
+  
+
+
+  
 </script>
 <script src="{% static 'js/board/board.js' %}"></script>
 {% endblock js %}
